unpackaged/main/default/objects/legaldeskapp__LegalDesk_Form_Rule__mdt/legaldeskapp__LegalDesk_Form_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type object to store Streamline AI form field rules metadata being sent from the Streamline AI form API</description>
    <label>Streamline AI Form Rule</label>
    <pluralLabel>Streamline AI Form Rules</pluralLabel>
</CustomObject>