unpackaged/main/default/objects/legaldeskapp__LegalDesk_Form_Rule__mdt/fields/legaldeskapp__Action_Field_Id__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Action_Field_Id__c</fullName>
    <description>This field stores the Streamline AI field Id of a Streamline AI field that can be show/hidden based on the value of the trigger field</description>
    <label>Deprecated Action Field Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>