unpackaged/main/default/objects/legaldeskapp__LegalDesk_Form_Rule__mdt/fields/legaldeskapp__Created_Date__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Created_Date__c</fullName>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>