unpackaged/main/default/objects/legaldeskapp__LegalDesk_Form_Rule__mdt/fields/legaldeskapp__Form_Mapped__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Form_Mapped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Mapped</label>
    <type>Checkbox</type>
</CustomField>