unpackaged/main/default/objects/legaldeskapp__LegalDesk_Form_Rule__mdt/fields/legaldeskapp__LegalDesk_Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__LegalDesk_Rule_Id__c</fullName>
    <description>This field stores the value of the rule Id that is returned by the Streamline AI form API</description>
    <label>Streamline AI Rule Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>