unpackaged/main/default/objects/legaldeskapp__LegalDesk_Form_Rule__mdt/fields/legaldeskapp__Rule_Order__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Rule_Order__c</fullName>
    <label>Rule Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>