unpackaged/main/default/objects/legaldeskapp__LegalDesk_Form_Rule__mdt/fields/legaldeskapp__Value__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Value__c</fullName>
    <description>This field stores the &quot;value&quot; attribute&#39;s value of a Streamline AI form rule. This value is the triggering value of the trigger field.</description>
    <label>Deprecated Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>